# WEB_modul_02_10

./: db.sqlite3  models.py  pyproject.toml
hw_10_project/: db.sqlite3  models.py  settings.py  test.py
hw_10_project/hw_10_project/: asgi.py  wsgi.py
hw_10_project/quotes/: models.py  urls.py  utils.py  views.py
hw_10_project/quotes/migrations/: 0001_initial.py
hw_10_project/quotes/static/quotes/: style.css
hw_10_project/quotes/templates/quotes/: base.html  index.html
hw_10_project/users/: urls.py  views.py
hw_10_project/utils/: migration.py
quotes/: urls.py  utils.py  views.py
quotes/migrations/: 0001_initial.py  0002_rename_name_quote_quote_alter_tag_name.py
quotes/static/quotes/: style.css
quotes/templates/quotes/: add_author.html  add_quote.html  author.html  base.html  index.html
users/: views.py
utils/: add_quotes_t0_mongo.py  authors.json  migration.py
your_project_name/your_project_name/: settings.py  urls.py
