[tool.poetry]
name = "web-modul-02-10"
version = "0.1.0"
description = ""
authors = ["Daryna Mirzaholi <dmirzagholi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.3"
black = "^24.2.0"
pymongo = "^4.6.2"
mongoengine = "^0.28.2"
quotes = "^0.0.3"
users = "^1.0.dev0"
django-db = "^0.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
